--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
+<!--    xmlns:tools="http://schemas.android.com/tools"></androidx.constraintlayout.widget.ConstraintLayout>-->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -56,7 +60,8 @@
                     android:gravity="center" android:padding="8dp"
                     android:background="#3CF1EBF1">
                     <ImageView android:layout_width="25dp" android:layout_height="25dp"
-                        android:src="@drawable/sunrise" android:tint="#FFFFFF"/>
+                        android:src="@drawable/sunrise"
+                        app:tint="#FFFFFF" />
                     <Space android:layout_width="wrap_content" android:layout_height="5dp"/>
                     <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                         android:textSize="12dp" android:text="Sunrise"/>
@@ -70,7 +75,7 @@
                     android:gravity="center" android:padding="8dp"
                     android:background="#3CF1EBF1">
                     <ImageView android:layout_width="25dp" android:layout_height="25dp"
-                        android:src="@drawable/sunset" android:tint="#FFFFFF"/>
+                        android:src="@drawable/sunset" app:tint="#FFFFFF"/>
                     <Space android:layout_width="wrap_content" android:layout_height="5dp"/>
                     <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                         android:textSize="12dp" android:text="Sunset"/>
@@ -84,7 +89,7 @@
                     android:gravity="center" android:padding="8dp"
                     android:background="#3CF1EBF1">
                     <ImageView android:layout_width="25dp" android:layout_height="25dp"
-                        android:src="@drawable/wind" android:tint="#FFFFFF"/>
+                        android:src="@drawable/wind" app:tint="#FFFFFF"/>
                     <Space android:layout_width="wrap_content" android:layout_height="5dp"/>
                     <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                         android:textSize="12dp" android:text="Wind"/>
@@ -103,7 +108,7 @@
                     android:gravity="center" android:padding="8dp"
                     android:background="#3CF1EBF1">
                     <ImageView android:layout_width="25dp" android:layout_height="25dp"
-                        android:src="@drawable/pressure" android:tint="#FFFFFF"/>
+                        android:src="@drawable/pressure" app:tint="#FFFFFF"/>
                     <Space android:layout_width="wrap_content" android:layout_height="5dp"/>
                     <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                         android:textSize="12dp" android:text="Pressure"/>
@@ -117,7 +122,7 @@
                     android:gravity="center" android:padding="8dp"
                     android:background="#3CF1EBF1">
                     <ImageView android:layout_width="25dp" android:layout_height="25dp"
-                        android:src="@drawable/humidity" android:tint="#FFFFFF"/>
+                        android:src="@drawable/humidity" app:tint="#FFFFFF"/>
                     <Space android:layout_width="wrap_content" android:layout_height="5dp"/>
                     <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                         android:textSize="12dp" android:text="Humidity"/>
@@ -131,7 +136,7 @@
                     android:gravity="center" android:padding="8dp"
                     android:background="#3CF1EBF1">
                     <ImageView android:layout_width="25dp" android:layout_height="25dp"
-                        android:src="@drawable/info" android:tint="#FFFFFF"/>
+                        android:src="@drawable/info" app:tint="#FFFFFF"/>
                     <Space android:layout_width="wrap_content" android:layout_height="5dp"/>
                     <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                         android:textSize="12dp" android:text="Created By"/>
